--- a/anime-quotes/css/style.css
+++ b/anime-quotes/css/style.css
@@ -1,78 +1,268 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 body {
   background: lightblue;
   font-family: 'Arimo', sans-serif;
 }
 
-h1,
-h3,
-h4 {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-h3 {
-  font-size: 1em;
-}
-
-section {
+/***Used for containing all child elements in container for flex****/
+.container {
   display: flex;
-  justify-content: center;
+
+  /*vertically stack children*/
   flex-direction: column;
+
+  /* expand to take full height of page */
+  /* min-height overrides both height & max-height */
+  min-height: 100vh;
+}
+
+main {
+  flex-grow: 1;
+}
+
+/***End for containing all child elements in container for flex****/
+
+/*****************START NAVBAR SECTION*****************/
+a {
+  text-decoration: none;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  width: 100vw;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  background-color: #000000;
+  font-size: 20px;
   align-items: center;
 }
 
-button {
-  width: fit-content;
-  margin: 0 auto;
+.logo {
+  display: flex;
+  margin-left: 5%;
+  color: #ffffff;
+  font-size: 25px;
+  font-weight: bold;
+  align-items: center;
+  white-space: nowrap;
+}
+
+.logo_header {
+  margin-left: 2%;
+  width: min-content;
+}
+
+.main_nav {
+  display: flex;
+  width: 50%;
+  float: right;
+  margin-right: 2%;
+  justify-content: space-between;
+  list-style: none;
+}
+.main_nav li:hover {
+  background-color: gray;
+}
+
+.main_nav li {
+  display: inline;
+  color: #ffffff;
+}
+.main_nav li a {
+  color: #ffffff;
+}
+
+.navbar_toggle {
+  display: none;
+}
+
+.img-logo {
+  width: 40%;
+  margin-right: 10%;
+  border-radius: 50%;
+}
+/*****************END OF NAVBAR SECTION*****************/
+
+/*****************START OF MAIN SECTION*****************/
+
+.site-name {
+  font-size: 3rem;
+  font-weight: 600;
+  font-style: italic;
   text-align: center;
-  border-radius: 50px;
-  background: yellow;
-  padding: 1rem 1rem;
 }
 
-h4 {
-  font-size: 1.25em;
-  margin: 1rem 0 0 0;
+.intro-text {
+  text-align: center;
+  font-size: 1.5em;
+  width: 50%;
+  margin: 0 auto;
 }
 
-img {
-  width: 80%;
-  height: 50vh;
+.generate-btn {
+  background-color: #0022ff;
+  color: white;
+  text-align: center;
+  border-radius: 25px;
+  padding: 5px;
+  width: 200px;
+  height: 40px;
+  margin: 1rem;
+}
+
+.middle-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.anime-chosen {
+  font-size: 2em;
+  text-decoration: underline;
 }
 
 .fun-fact {
-  width: 80%;
+  width: 30%;
   margin: 0 auto;
   text-align: center;
   padding: 2rem 0;
   font-size: 1rem;
 }
 
-ul {
-  list-style: none;
-  display: flex;
-  justify-content: space-around;
-  background-color: darkblue;
-  padding: 1.5rem;
-  margin: 0;
+.img-placer {
+  width: 30%;
+  height: 500px;
+  margin-bottom: 2%;
 }
 
-a {
-  text-decoration: none;
-  color: white;
-  font-size: 1rem;
-  cursor: pointer;
-}
+/*****************END OF MAIN SECTION*****************/
 
-a:hover {
-  color: aqua;
-}
+/*****************START FOOTER SECTION*****************/
 
 .footer-section {
-  list-style: none;
+  background-color: #000000;
   display: flex;
-  background-color: darkblue;
+  height: 7vh;
   justify-content: space-around;
-  padding: 1.5rem;
-  margin-top: 2rem;
-  margin-bottom: 0;
+  align-items: center;
+  width: 100%;
+}
+
+.footer-link {
+  color: #ffffff;
+}
+
+.footer-link:hover {
+  background-color: gray;
+}
+/*****************END FOOTER SECTION*****************/
+
+/***************START OF RESPONSIVE SECTION***************/
+/***************START OF RESPONSIVE SECTION***************/
+/***************START OF RESPONSIVE SECTION***************/
+
+/***************START OF RESPONSIVE NAVBAR*************/
+@media only screen and (max-width: 992px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100vw;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    background-color: #000000;
+    font-size: 20px;
+  }
+
+  .main_nav {
+    display: none;
+  }
+
+  .show_nav {
+    padding-top: 2%;
+    display: flex;
+    width: 100vw;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: #1d1c1c;
+  }
+
+  .main_nav li {
+    width: 100%;
+    height: 50px;
+    font-size: 25px;
+    justify-content: center;
+    text-align: center;
+    padding: 0%;
+  }
+  .navbar_toggle {
+    margin-left: 5%;
+    margin-right: 5%;
+    font-size: 30px;
+    color: #ffffff;
+    background: transparent;
+    border-color: transparent;
+    transition: all 0.3s linear;
+    cursor: pointer;
+    display: block;
+  }
+  .logo_header {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-right: 2%;
+  }
+
+  .img-logo {
+    width: 8%;
+    margin-right: 2%;
+  }
+
+  .site-name {
+    font-size: 2.5rem;
+    font-weight: 600;
+    font-style: italic;
+    text-align: center;
+  }
+
+  .intro-text {
+    text-align: center;
+    font-size: 1.5em;
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .anime-chosen {
+    font-size: 1.5em;
+    text-decoration: underline;
+  }
+
+  .fun-fact {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+    padding: 2rem 0;
+    font-size: 1.2rem;
+  }
+
+  .img-placer {
+    width: 80%;
+    height: 500px;
+    margin-bottom: 5%;
+  }
 }
